# VTW-linuxserver

./: CMakeLists.txt  MainCore.cpp  README.md  UDPReceiver.cpp  UDPReceiver.h  UDPReceiver.h.gch  feed1.ffm
Portocol/: 1-broadcast-mobil->server.json  2-response-server->mobil.json  3-0-request-mobil->server.json  3-1-update-mobil->servidor.json  4-response-server->mobil.json  5.0-start-mobil->server.json  5.1-stop-mobil->server.json  6-response-server->mobil.json  7-error-msg.json  HeaderDef.h  data.json  script.sh
Threads/: ForkThread.cpp  TcpThread.cpp  TcpThread.h  Thread.h  UdpThread.cpp  UdpThread.h
lib/: ffserver-config.txt
mouseController/: controller.cpp  controller.h  controlmodule.cpp  controlmodule.h  stdafx.h  translate.cpp  translate.h
startApp/: startApp.cpp  startApp.h
startApp/Threads/: ForkThread.h  UdpThreadCode.cpp  UdpThreadCode.h
tcpServer/: Callbacks.h  JsonHandler.cpp  JsonHandler.h  TcpServer.cpp  TcpServer.h  TcpThread.cpp  TcpThread.h  tcpServer.cpp  tcpServer.h
udpServer/: UDPReceiver.cpp  UDPReceiver.h
